# SIL_PPT_V2

./: .dockerignore  .gitignore  FASTMCP_CLOUD_DEPLOYMENT.md  MCP_README.md  MCP_SETUP_COMPLETE.md  README.md  catgories_test.py  check_backup.py  create_frontend.py  debug_process.py  fastmcp.yaml  font_test.py  full_data_export.py  get_csvs.py  goods_test.py  import_names.py  main.py  main_old.py  matplotlib_font_fix.py  mcp_requirements.txt  mcp_requirements_cloud.txt  mcp_server.py  mcp_server_cloud.py  panthers_debug.py  production_debug.py  pyproject.toml  quick_start.py  quick_start_old.py  regen_charts.py  render.yaml  requirements.base.txt  requirements.render.txt  requirements.txt  requirements_old.txt  simple_test.py  snowflake_view_test.py  test_category_table.py  test_gofundme.py  test_local.py  test_mcp_server.py  (+6 more)
assets/: crop_circle.py
backend/: add_postgres_colmuns.py  app.py  postgresql_job_store.py  test_db.py  test_key.py  test_sf.py
config/: approved_communities.yaml  categories.yaml  team_config.yaml
data_processors/: category_analyzer.py  cusotm_debug.py  demographic_processor.py  demographic_processor_old.py  merchant_ranker.py  snowflake_connector.py  test_base64.py  test_category.py  test_custom_category.py
frontend/: index.html  index_old.html
report_builder/: pptx_builder.py  pptx_old.py  template_manager.py
slide_generators/: base_slide.py  behaviors_slide.py  category_slide.py  demographic_overview_slide.py  demographics_slide.py  demographics_slide1.py  intro_slide.py  test_demo_slide.py  title_slide.py
utils/: __init__.py  (+9 more)
(+77 files in other folders)
