[project]
name = "sports-innovation-lab-mcp"
version = "1.0.0"
description = "Sports Innovation Lab Analytics MCP Server"
requires-python = ">=3.8"
dependencies = [
    "fastmcp>=0.1.0",
    "python-dotenv>=0.19.0",
    "pyyaml>=6.0",
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "openai>=1.0.0",
    "Pillow>=9.0.0",
    "matplotlib>=3.5.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
